@@ -1,23 +1,5 @@
-/META.*
-/MYMETA.*
-/Makefile
-/Makefile.old
-/MANIFEST.bak
-/MANIFEST.SKIP.bak
-/blib/
-/pm_to_blib
 /.build/
-/MANIFEST
 !.gitignore
-*.bs
-/xs/*.c
-*.o
-/cover_db/
-*.gc??
-/test-mydeps-*
-/nytprof*
-/inc/
-.*.sw[a-z]
 /Devel-REPL-*
 /todo.txt
 /todo/
