@@ -1,0 +1,109 @@
+name    = Devel-REPL
+author  = Matt S Trout - mst (at) shadowcatsystems.co.uk (L<http://www.shadowcatsystems.co.uk/>)
+copyright_holder = Matt S Trout - mst (at) shadowcatsystems.co.uk (L<http://www.shadowcatsystems.co.uk/>)
+license = Perl_5
+copyright_year = 2007
+
+[@Author::ETHER]
+:version = 0.021
+-remove = PodWeaver
+-remove = AutoPrereqs
+server = p5sagit
+Authority.authority = cpan:PHAYLON
+Test::MinimumVersion.max_target_perl = 5.008001
+
+[ExecDir]
+dir = script
+
+[Prereqs / RuntimeRequires]
+; core
+File::Spec = 0
+Term::ReadLine = 0
+; rest
+Moose = 0.93
+MooseX::Object::Pluggable = 0.0009
+MooseX::Getopt = 0.18
+namespace::autoclean = 0
+File::HomeDir = 0
+Task::Weaken = 0
+B::Concise = 0
+Term::ANSIColor = 0
+Devel::Peek = 0
+Module::Runtime = 0
+
+[Prereqs / TestRequires]
+Test::More = 0.88
+Test::Warnings = 0
+
+[Prereqs / RuntimeRecommends]
+PPI::XS = 0.902
+
+
+[OptionalFeature / Completion]
+:version = 0.005
+-description = Completion plugin - extensible tab completion
+-always_recommend = 1
+-default = 1
+PPI = 0
+
+
+[OptionalFeature / DDS]
+-description = DDS plugin - better format results with Data::Dump::Streamer
+-always_recommend = 1
+-default = 1
+Data::Dump::Streamer = 0
+
+[OptionalFeature / DDC]
+-description = DDC plugin - even better format results with Data::Dumper::Concise
+-always_recommend = 1
+-default = 1
+Data::Dumper::Concise = 0
+
+[OptionalFeature / INC_completion]
+-description = INC completion driver - tab complete module names in use and require
+-always_recommend = 1
+-default = 1
+File::Next = 0
+
+[OptionalFeature / Interrupt]
+-description = Interrupt plugin - traps SIGINT to kill long-running lines
+-always_recommend = 1
+; if we were munging Makefile.PL, we would make -default = 1 if $^O !~ /Win32/
+-default = 0
+Sys::SigAction = 0
+
+[OptionalFeature / Keywords_completion]
+-description = Keywords completion driver - tab complete Perl keywords and operators
+-always_recommend = 1
+-default = 1
+B::Keywords = 0
+
+[OptionalFeature / LexEnv]
+-description = LexEnv plugin - variables declared with "my" persist between statements
+-always_recommend = 1
+-default = 1
+Lexical::Persistence = 0
+
+[OptionalFeature / MultiLine]
+-description = MultiLine::PPI plugin - continue reading lines until all blocks are closed
+-always_recommend = 1
+-default = 1
+PPI = 0
+
+[OptionalFeature / Nopaste]
+-description = Nopaste plugin - upload a session\'s input and output to a Pastebin
+-always_recommend = 1
+-default = 0
+App::Nopaste = 0
+
+[OptionalFeature / PPI]
+-description = PPI plugin - PPI dumping of Perl code
+-always_recommend = 1
+-default = 1
+PPI = 0
+
+[OptionalFeature / Refresh]
+-description = Refresh plugin - automatically reload libraries with Module::Refresh
+-always_recommend = 1
+-default = 0
+Module::Refresh = 0
