@@ -5,8 +5,6 @@ use Moose;
 use namespace::autoclean;
 use 5.008001; # backwards compat, doesn't warn like 5.8.1
 
-our $VERSION = '1.003020';
-
 with 'MooseX::Object::Pluggable';
 
 use Devel::REPL::Error;
